EA-2796: Improve failed tasks retrieval implementation
- use request url for generating clickable links (instead of data.europeana.eu)